LH | feat: add level up settlements and fixes

--- a/last-hearth-landing/src/app/layout/footer/footer.component.html
+++ b/last-hearth-landing/src/app/layout/footer/footer.component.html
@@ -17,7 +17,9 @@
 
                 <span class="text-lh-primary hidden sm:block">•</span>
 
-                <a class="self-start">Версия 1.1.3 beta от 13.11.2025</a>
+                <a href="https://docs.lasthearth.ru/" target="_blank" class="self-start">
+                    Версия 1.1.3 beta от 13.11.2025
+                </a>
             </div>
         </div>
     </div>
@@ -28,7 +30,11 @@
                 <div
                     class="flex cursor-pointer justify-center items-center size-10 relative before:absolute before:inset-0 before:bg-linear-to-br before:from-gray-500/20 before:to-gray-800/10 before:backdrop-blur-md before:content-[''] before:opacity-60 before:z-0 before:rounded-xl before:border before:border-white/5"
                 >
-                    <a class="z-10 nav-button rounded-lg p-2.5" href="https://boosty.to/lisov" target="_blank">
+                    <a
+                        class="z-10 nav-button rounded-lg p-2.5 !border-none"
+                        href="https://boosty.to/lisov"
+                        target="_blank"
+                    >
                         <img src="/images/Boosty.svg" alt="Boosty" />
                     </a>
                 </div>
@@ -37,7 +43,7 @@
                     class="flex cursor-pointer justify-center items-center size-10 relative before:absolute before:inset-0 before:bg-linear-to-br before:from-gray-500/20 before:to-gray-800/10 before:backdrop-blur-md before:content-[''] before:opacity-60 before:z-0 before:rounded-xl before:border before:border-white/5"
                 >
                     <a
-                        class="z-10 nav-button rounded-lg p-2.5"
+                        class="z-10 nav-button rounded-lg p-2.5 !border-none"
                         href="https://www.donationalerts.com/r/lisovn"
                         target="_blank"
                     >
@@ -50,7 +56,7 @@
                     class="flex cursor-pointer justify-center items-center size-10 relative before:absolute before:inset-0 before:bg-linear-to-br before:from-gray-500/20 before:to-gray-800/10 before:backdrop-blur-md before:content-[''] before:opacity-60 before:z-0 before:rounded-xl before:border before:border-white/5"
                 >
                     <a
-                        class="z-10 nav-button rounded-lg p-2.5"
+                        class="z-10 nav-button rounded-lg p-2.5 !border-none"
                         href="https://discord.com/invite/FZb7SGrSFy"
                         target="_blank"
                     >
@@ -61,7 +67,7 @@
                     class="flex justify-center cursor-pointer items-center size-10 relative before:absolute before:inset-0 before:bg-linear-to-br before:from-gray-500/20 before:to-gray-800/10 before:backdrop-blur-md before:content-[''] before:opacity-60 before:z-0 before:rounded-xl before:border before:border-white/5"
                 >
                     <a
-                        class="z-10 nav-button rounded-lg p-2.5"
+                        class="z-10 nav-button rounded-lg p-2.5 !border-none"
                         href="https://www.youtube.com/@LISOVCORP"
                         target="_blank"
                     >
