--- a/last-hearth-landing/src/app/profile/profile-navigation/profile-navigation.component.html
+++ b/last-hearth-landing/src/app/profile/profile-navigation/profile-navigation.component.html
@@ -23,7 +23,7 @@
     >
         <tui-icon icon="@tui.castle" />
         <tui-pulse
-            *ngIf="invitations?.invitations?.length"
+            *ngIf="invitations?.length"
             tuiHintAppearance="floating"
             class="!absolute !top-0.5 !right-0.5 !scale-110"
         />
