--- a/last-hearth-landing/src/app/profile/statistics/statistics.component.html
+++ b/last-hearth-landing/src/app/profile/statistics/statistics.component.html
@@ -52,7 +52,7 @@
                     class="h-36 test relative transform transition duration-500 hover:scale-[101%] hover:cursor-pointer flex size-full bg-cover bg-repeat rounded-2xl object-center shadow-2xl"
                 >
                     <p
-                        class="absolute ml-12 self-center justify-self-start text-5xl uppercase font-bold text-[#bdb093]"
+                        class="absolute lg:ml-12 ml-4 self-center justify-self-start text-5xl uppercase font-bold text-[#bdb093]"
                     >
                         {{ $index + 1 }}
                     </p>
@@ -68,7 +68,7 @@
                                 } @else {
                                     <tui-icon icon="@tui.user" class="size-8 text-lh-primary-2" />
                                 }
-                                <p class="font-semibold text-lh-primary-2">{{ item.name }}</p>
+                                <p class="font-semibold text-lh-primary-2 text-base sm:text-2xl">{{ item.name }}</p>
                             </div>
                             <p class="font-extrabold text-4xl text-shadow-lg" *ngIf="activeItemIndex === 0">
                                 {{ item.deaths }}
