--- a/last-hearth-landing/src/app/settlements/settlement-card/settlement-card.component.html
+++ b/last-hearth-landing/src/app/settlements/settlement-card/settlement-card.component.html
@@ -1,5 +1,7 @@
 <div
-    [style.backgroundImage]="data().attachments[0].url ? 'url('+ data().attachments[0].url +')' : 'url(/images/screenshots/screen_1.png)'"
+    [style.backgroundImage]="
+        data().attachments[0].url ? 'url(' + data().attachments[0].url + ')' : 'url(/images/screenshots/screen_1.png)'
+    "
     class="transform transition duration-500 hover:scale-[101%] flex size-full bg-cover bg-repeat relative rounded-4xl before:brightness-60 object-center shadow-2xl before:rounded-4xl before: before:size-full before:absolute before:!backdrop-blur-2xl before:z-10"
 >
     <div class="p-8 z-20 flex flex-col gap-8 items-center justify-between w-full">
@@ -14,17 +16,17 @@
 
                 <div class="flex gap-3">
                     <span
-                        class="bg-[#c35a17] uppercase text-neutral-100 font-bold text-xs md:text-sm px-3 p-1.5 rounded-2xl"
+                        class="bg-lh-accent-3 uppercase text-neutral-100 font-bold text-xs md:text-sm px-3 p-1.5 rounded-2xl"
                     >
-                        {{getSettlementTypeByKey(data().type)}}
+                        {{ getSettlementTypeByKey(data().type) }}
                     </span>
                     <span
-                        [class.!bg-green-600]="data().diplomacy === 'Мирный'"
+                        [class.!bg-green-600]="data().diplomacy === 'Миролюбивый'"
                         [class.!bg-neutral-600]="data().diplomacy === 'Нейтральный'"
-                        [class.!bg-red-600]="data().diplomacy === 'Агрессивный'"
+                        [class.!bg-lh-danger]="data().diplomacy === 'Агрессивный'"
                         class="uppercase text-neutral-100 font-bold text-xs md:text-sm px-3 p-1.5 rounded-2xl"
                     >
-                        {{data().diplomacy}}
+                        {{ data().diplomacy }}
                     </span>
                 </div>
             </div>
@@ -35,15 +37,30 @@
             ></p>
             <hr class="h-px bg-neutral-200 w-full mt-2 rounded-full" />
             <div class="flex flex-wrap gap-3">
-                <span class="bg-[#6f9ff8] text-neutral-100 font-bold text-xs md:text-base px-3 p-1.5 rounded-2xl">
-                    {{leader}}
-                </span>
+                <div class="flex bg-lh-leader text-neutral-100 font-bold text-xs md:text-base px-3 p-1.5 rounded-2xl">
+                    @if (leader?.isOnline === true) {
+                        <tui-pulse class="self-center mr-2.5 online" />
+                    } @else {
+                        <tui-pulse [playing]="false" class="self-center mr-2.5 offline" />
+                    }
+                    <span>
+                        {{ leader?.user_game_name }}
+                    </span>
+                </div>
+
                 @for (item of users; track $index) {
-                <span
-                    class="bg-[rgb(148,90,50)] text-neutral-100 font-bold text-xs md:text-base px-3 p-1.5 rounded-2xl"
-                >
-                    {{item}}
-                </span>
+                    <div
+                        class="flex bg-lh-accent-3 text-neutral-100 font-bold text-xs md:text-base px-3 p-1.5 rounded-2xl"
+                    >
+                        @if (item?.isOnline === true) {
+                            <tui-pulse class="self-center mr-2.5 online" />
+                        } @else {
+                            <tui-pulse [playing]="false" class="self-center mr-2.5 offline" />
+                        }
+                        <span>
+                            {{ item?.user_game_name }}
+                        </span>
+                    </div>
                 }
             </div>
 
