--- a/last-hearth-landing/src/app/settlements/settlement/settlement.component.html
+++ b/last-hearth-landing/src/app/settlements/settlement/settlement.component.html
@@ -1,17 +1,17 @@
-@let settlement = settlementInfo | async;
-@let invite = notifications$ | async;
+@let settlement = settlementInfo$ | async;
+@let invitations = invitations$ | async;
 
 @if (settlement === null) {
     <tui-loader />
 } @else {
     <div class="flex flex-col gap-8">
         <p class="text-3xl lg:text-4xl font-bold">Ваше селение</p>
-        @if (invite?.invitations?.length) {
-            @for (item of invite?.invitations; track $index) {
+        @if (invitations?.length) {
+            @for (item of invitations; track $index) {
                 <div class="self-center flex flex-col gap-3 items-center">
                     <p class="text-3xl font-semibold">
                         Вас приглашают вступить в селение
-                        <span class="font-bold">{{ getSettlementName(item.settlement_id) | async }}</span>
+                        <span class="font-bold">{{ getSettlementName$(item.settlement_id) | async }}</span>
                     </p>
                     <div class="flex gap-3">
                         <button
@@ -51,9 +51,9 @@
                                 <div class="flex gap-3 items-center">
                                     <p class="text-xl font-semibold">Тип поселения:</p>
                                     <span
-                                        class="bg-[#c35a17] uppercase font-bold text-xs md:text-sm px-3 p-1.5 rounded-2xl"
+                                        class="bg-lh-accent-3 uppercase font-bold text-xs md:text-sm px-3 p-1.5 rounded-2xl"
                                     >
-                                        {{ getSettlementTypeByKey(settlement.type) }}
+                                        {{ getSettlementType(settlement.type) }}
                                     </span>
                                 </div>
                                 <div class="flex gap-3 items-center">
@@ -62,7 +62,7 @@
                                         [class.!bg-green-600]="settlement.diplomacy === 'Мирный'"
                                         [class.!bg-neutral-600]="settlement.diplomacy === 'Нейтральный'"
                                         [class.!bg-red-600]="settlement.diplomacy === 'Агрессивный'"
-                                        class="bg-[#c35a17] uppercase font-bold text-xs md:text-sm px-3 p-1.5 rounded-2xl"
+                                        class="uppercase font-bold text-xs md:text-sm px-3 p-1.5 rounded-2xl"
                                     >
                                         {{ settlement.diplomacy }}
                                     </span>
@@ -83,17 +83,32 @@
                     <hr class="h-px text-neutral-400 w-full mt-2 rounded-full" />
                     <span class="text-xl font-semibold -mb-4">Население:</span>
                     <div class="flex flex-wrap gap-3">
-                        <span
-                            class="bg-[#6f9ff8] text-neutral-100 font-bold text-xs md:text-base px-3 p-1.5 rounded-2xl"
+                        <div
+                            class="flex bg-lh-leader text-neutral-100 font-bold text-xs md:text-base px-3 p-1.5 rounded-2xl"
                         >
-                            {{ leader }}
-                        </span>
-                        @for (item of users; track $index) {
-                            <span
-                                class="bg-[rgb(148,90,50)] text-neutral-100 font-bold text-xs md:text-base px-3 p-1.5 rounded-2xl"
-                            >
-                                {{ item }}
+                            @if (leader?.isOnline === true) {
+                                <tui-pulse class="self-center mr-2.5 online" />
+                            } @else {
+                                <tui-pulse [playing]="false" class="self-center mr-2.5 offline" />
+                            }
+                            <span>
+                                {{ leader?.user_game_name }}
                             </span>
+                        </div>
+
+                        @for (item of users; track $index) {
+                            <div
+                                class="flex bg-lh-accent-3 text-neutral-100 font-bold text-xs md:text-base px-3 p-1.5 rounded-2xl"
+                            >
+                                @if (item?.isOnline === true) {
+                                    <tui-pulse class="self-center mr-2.5 online" />
+                                } @else {
+                                    <tui-pulse [playing]="false" class="self-center mr-2.5 offline" />
+                                }
+                                <span>
+                                    {{ item?.user_game_name }}
+                                </span>
+                            </div>
                         }
                     </div>
 
@@ -101,7 +116,7 @@
                         <button
                             *ngIf="userId === settlement.leader.user_id"
                             (click)="invitePlayer(settlement)"
-                            class="text-white transition-all mt-8 duration-300 font-semibold text-base cursor-pointer bg-[rgb(148,90,50)] hover:bg-[#ff7920] rounded-2xl py-1.5 px-3"
+                            class="text-white transition-all mt-8 duration-300 font-semibold text-base cursor-pointer bg-lh-accent-3 hover:bg-[#ff7920] rounded-2xl py-1.5 px-3"
                         >
                             Пригласить игроков
                         </button>
@@ -109,7 +124,7 @@
                         <button
                             *ngIf="userId === settlement.leader.user_id"
                             (click)="levelUp(settlement.type)"
-                            class="text-white transition-all mt-8 duration-300 font-semibold text-base cursor-pointer bg-[rgb(148,90,50)] hover:bg-[#ff7920] rounded-2xl py-1.5 px-3"
+                            class="text-white transition-all mt-8 duration-300 font-semibold text-base cursor-pointer bg-lh-accent-3 hover:bg-[#ff7920] rounded-2xl py-1.5 px-3"
                         >
                             Повысить уровень
                         </button>
