--- a/last-hearth-landing/src/app/profile/create-settlement-from/settlements-types-forms/camp-form/camp-form.component.html
+++ b/last-hearth-landing/src/app/profile/create-settlement-from/settlements-types-forms/camp-form/camp-form.component.html
@@ -3,44 +3,41 @@
         <p class="text-xl">
             Какое будет название?
             <span class="text-lh-danger">*</span>
+            <lh-hint
+                hintText="Это будет официальное название вашего образования. Оно должно быть логичным и не содержать нецензурной лексики."
+            />
         </p>
         <lh-input placeholder="Введите название..." formControlName="name" />
-        <p class="text-sm pl-1">
-            Это будет официальное название вашего образования. Оно должно быть логичным и не содержать нецензурной
-            лексики.
-        </p>
     </div>
 
     <div class="flex flex-col gap-1">
         <p class="text-xl">
             Координаты расположения
             <span class="text-lh-danger">*</span>
+            <lh-hint hintText="Игровые координаты где располагается образование в виде: х: значение, y: значение." />
         </p>
         <lh-input placeholder="Введите x..." type="inputNumber" formControlName="x" />
         <lh-input placeholder="Введите z..." type="inputNumber" formControlName="z" />
-        <p class="text-sm pl-1">Игровые координаты где располагается образование в виде: х: значение, z: значение.</p>
     </div>
 
     <div class="flex flex-col gap-1">
         <p class="text-xl">
             Выберите ваш дипломатический статус
             <span class="text-lh-danger">*</span>
+            <lh-hint hintText="Дипломатический статус должен строго исполняться образованием." />
         </p>
         <lh-input formControlName="diplomacy" type="select" [items]="diplomacy" placeholder="Выберите тип..." />
-        <div class="flex flex-col pl-1">
-            <p class="text-sm">Дипломатический статус должен строго исполняться образованием.</p>
-        </div>
     </div>
 
     <div class="flex flex-col gap-1">
         <p class="text-xl">
             Описание или лор образования
             <span class="text-lh-danger">*</span>
+            <lh-hint
+                hintText="Опишите историю или то, чем является ваше образование. Это поможет новым игрокам вступить именно к вам."
+            />
         </p>
         <lh-input placeholder="Введите историю..." type="textarea" formControlName="description" />
-        <p class="text-sm pl-1">
-            Опишите историю или то, чем является ваше образование. Это поможет новым игрокам вступить именно к вам.
-        </p>
     </div>
 
     <div *ngFor="let key of fileFields">
