--- a/last-hearth-landing/src/app/layout/header/header.component.html
+++ b/last-hearth-landing/src/app/layout/header/header.component.html
@@ -3,6 +3,7 @@
 @let isAuth = userService.authState$ | async;
 @let invitations = invitations$ | async;
 @let userVerifications = userVerifications$ | async;
+@let settlementVerifications = settlementVerifications$ | async;
 
 <div class="flex flex-col xl:gap-24 gap-8">
     <div class="flex justify-center sm:justify-between px-4 sm:px-0">
@@ -11,7 +12,7 @@
             class="hidden mt-8 z-10 sm:flex w-fit h-18 sm:h-20 items-center justify-start rounded-xl backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]"
         >
             <div class="rounded-2xl gap-4 flex items-center p-4 sm:py-3 sm:pl-3 sm:pr-4">
-                <img src="/images/logo.png" alt="Логотип сервера" class="relative z-10 h-10 w-10 sm:h-14 sm:w-14" />
+                <img src="/logo.ico" alt="Логотип сервера" class="relative z-10 h-10 w-10 sm:h-14 sm:w-14" />
                 <p
                     [ngClass]="{ 'hidden! 2xl:block!': isAuth }"
                     class="hidden sm:block text-2xl/7.5 sm:text-5xl text-white font-medium text-nowrap"
@@ -156,7 +157,9 @@
                 class="relative nav-button p-2.5"
             >
                 <tui-icon [icon]="isAuth ? '@tui.user' : '@tui.log-in'" />
-                @if (invitations?.length || (userVerifications?.length && isAdmin())) {
+                @if (
+                    invitations?.length || ((settlementVerifications?.length || userVerifications?.length) && isAdmin())
+                ) {
                     <tui-pulse tuiHintAppearance="floating" class="!absolute !top-0.5 !right-0.5 !scale-110" />
                 }
             </button>
