--- a/last-hearth-landing/src/app/profile/admin/settlement-verification-request/settlement-verification-request.component.html
+++ b/last-hearth-landing/src/app/profile/admin/settlement-verification-request/settlement-verification-request.component.html
@@ -1,18 +1,39 @@
 <div class="size-full rounded-xl border border-neutral-400 p-4 flex flex-col gap-2">
-    <p class="text-xl"><span class="font-semibold">Тип:</span> {{ getSettlementType(data().type) }}</p>
-    <p class="text-xl"><span class="font-semibold">Наименование:</span> {{data().name}}</p>
-    <p class="text-xl"><span class="font-semibold">Описание:</span> {{data().description}}</p>
-    <p class="text-xl"><span class="font-semibold">Дипломатический курс:</span> {{data().diplomacy}}</p>
+    <p class="text-xl">
+        <span class="font-semibold">Тип:</span>
+        {{ getSettlementType(data().type) }}
+    </p>
+    <p class="text-xl">
+        <span class="font-semibold">Наименование:</span>
+        {{ data().name }}
+    </p>
+    <p class="text-xl text-wrap break-words">
+        <span class="font-semibold">Описание:</span>
+        {{ data().description }}
+    </p>
+    <p class="text-xl">
+        <span class="font-semibold">Координаты расположения:</span>
+        <span class="ml-1 font-semibold">x:</span>
+        {{ data().coordinates.x }},
+        <span class="font-semibold">z:</span>
+        {{ data().coordinates.y }}
+    </p>
+    <p class="text-xl">
+        <span class="font-semibold">Дипломатический курс:</span>
+        {{ data().diplomacy }}
+    </p>
     @for (item of data().attachments; track $index) {
-    <div class="flex flex-col gap-2">
-        <p class="text-xl"><span class="font-semibold">{{item.desc}}:</span></p>
-        <div
-            (click)="show(item.url, item.desc)"
-            class="relative cursor-pointer hover:scale-[101%] transition-all hover:shadow-xl shadow-md duration-500 aspect-video rounded-2xl overflow-hidden before:absolute before:inset-0 before:bg-linear-to-br before:from-gray-500/20 before:to-gray-800/10 before:backdrop-blur-md before:content-[''] before:opacity-60 before:z-0 before:rounded-2xl before:border before:border-white/5"
-        >
-            <img [src]="item.url" class="relative z-10 w-full h-full object-contain object-center" />
+        <div class="flex flex-col gap-2">
+            <p class="text-xl">
+                <span class="font-semibold">{{ item.desc }}:</span>
+            </p>
+            <div
+                (click)="show(item.url, item.desc)"
+                class="relative cursor-pointer hover:scale-[101%] transition-all hover:shadow-xl shadow-md duration-500 aspect-video rounded-2xl overflow-hidden before:absolute before:inset-0 before:bg-linear-to-br before:from-gray-500/20 before:to-gray-800/10 before:backdrop-blur-md before:content-[''] before:opacity-60 before:z-0 before:rounded-2xl before:border before:border-white/5"
+            >
+                <img [src]="item.url" class="relative z-10 w-full h-full object-cover object-center" />
+            </div>
         </div>
-    </div>
     }
 
     <div class="flex gap-4 justify-end">
