LH | feat: market update

--- a/last-hearth-landing/src/market/market.component.html
+++ b/last-hearth-landing/src/market/market.component.html
@@ -16,4 +16,10 @@
             <app-special />
         }
     }
+    <button
+        (click)="howBuy()"
+        class="text-white transition-all self-center duration-300 font-bold cursor-pointer bg-lh-accent-2 hover:bg-lh-accent-1 rounded-lg py-2.5 px-4"
+    >
+        Приобрести
+    </button>
 </div>
