--- a/last-hearth-landing/src/app/layout/footer/footer.component.html
+++ b/last-hearth-landing/src/app/layout/footer/footer.component.html
@@ -17,7 +17,9 @@
 
                 <span class="text-lh-primary hidden sm:block">•</span>
 
-                <a href="https://docs.lasthearth.ru/" target="_blank" class="self-start">Версия 1.1.5 beta от 09.12.2025</a>
+                <a href="https://docs.lasthearth.ru/" target="_blank" class="self-start">
+                    Версия 1.1.6 beta от 10.12.2025
+                </a>
             </div>
         </div>
     </div>
