--- a/last-hearth-landing/src/market/components/how-to-buy/how-to-buy.component.html
+++ b/last-hearth-landing/src/market/components/how-to-buy/how-to-buy.component.html
@@ -1,9 +1,9 @@
-<div class="flex flex-col gap-8">
-    <p class="text-2xl/7.5 text-lh-primary font-semibold">Как приобрести титул или набор?</p>
+<div class="flex flex-col md:gap-8 gap-4">
+    <p class="md:text-4xl text-2xl/7.5 text-lh-primary font-bold">Как приобрести титул или набор?</p>
     <div class="flex flex-col gap-4">
         <div class="flex items-center gap-10">
-            <p class="text-6xl font-extrabold text-[#bdb093] min-w-12">1</p>
-            <p class="text-lh-primary text-2xl/7.5 font-bold">
+            <p class="md:text-6xl text-5xl font-extrabold text-[#bdb093] min-w-12">1</p>
+            <p class="text-lh-primary md:text-2xl/7.5 text-xl font-bold">
                 Перейти на
                 <a
                     class="text-blue-400 font-bold border-dashed border-b hover:text-blue-600 transition-all duration-100"
@@ -16,26 +16,28 @@
             </p>
         </div>
         <div class="flex items-center gap-10">
-            <p class="text-6xl font-extrabold text-[#bdb093] min-w-12">2</p>
-            <p class="text-lh-primary text-2xl/7.5 font-bold">
+            <p class="md:text-6xl text-5xl font-extrabold text-[#bdb093] min-w-12">2</p>
+            <p class="text-lh-primary md:text-2xl/7.5 text-xl font-bold">
                 Отправить донат на сумму стоимости титула или набора с учетом комиссии платформы, указать его название и
                 свой игровой ник в сообщении.
             </p>
         </div>
         <div class="flex items-center gap-10">
-            <p class="text-6xl font-extrabold text-[#bdb093] min-w-12">3</p>
-            <p class="text-lh-primary text-2xl/7.5 font-bold">Дождаться выдачи роли на сервере.</p>
+            <p class="md:text-6xl text-5xl font-extrabold text-[#bdb093] min-w-12">3</p>
+            <p class="text-lh-primary md:text-2xl/7.5 text-xl font-bold">Дождаться выдачи роли на сервере.</p>
         </div>
         <div class="flex items-center gap-10">
-            <p class="text-6xl font-extrabold text-[#bdb093] min-w-12">4</p>
-            <p class="text-lh-primary text-2xl/7.5 font-bold">
-                Использовать на сервере команду /help kit для получения информации о доступных командах системы китов.
+            <p class="md:text-6xl text-5xl font-extrabold text-[#bdb093] min-w-12">4</p>
+            <p class="text-lh-primary md:text-2xl/7.5 text-xl font-bold">
+                Использовать на сервере команду
+                <tui-copy size="l">/help kit</tui-copy>
+                для получения информации о доступных командах системы китов.
             </p>
         </div>
     </div>
-    <div class="text-xl">
+    <div class="md:text-xl text-base">
         <p>
-            При покупке вы соглагшаетесь с
+            При покупке вы соглашаетесь с
             <a
                 href="https://lasthearth.ru/rules"
                 class="text-blue-400 font-bold border-dashed border-b hover:text-blue-600 transition-all duration-100"
@@ -66,12 +68,12 @@
         </p>
     </div>
 
-    <a
+    <button
         href="https://boosty.to/lisov"
         target="_blank"
-        class="flex gap-4 self-center border-2 rounded-2xl border-amber-600 p-4 bg-transparent hover:scale-[103%] transition-all duration-100 uppercase font-semibold"
+        class="flex gap-4 self-center border-2 rounded-2xl border-lh-accent md:p-4 p-2.5 bg-transparent hover:scale-[103%] transition-all duration-100 uppercase font-semibold cursor-pointer"
     >
         <img src="/images/Boosty.svg" />
         Приобрести
-    </a>
+    </button>
 </div>
