--- a/last-hearth-landing/src/market/market.component.html
+++ b/last-hearth-landing/src/market/market.component.html
@@ -8,18 +8,24 @@
     @switch (activeItemIndex) {
         @case (0) {
             <app-titles />
+            <div
+                (click)="howToBuy()"
+                class="text-white uppercase transition-all self-center duration-300 font-bold cursor-pointer bg-lh-accent-3 hover:bg-lh-accent rounded-lg py-2.5 px-4"
+            >
+                Приобрести
+            </div>
         }
         @case (1) {
             <app-kits />
+            <div
+                (click)="howToBuy()"
+                class="text-white uppercase transition-all self-center duration-300 font-bold cursor-pointer bg-lh-accent-3 hover:bg-lh-accent rounded-lg py-2.5 px-4"
+            >
+                Приобрести
+            </div>
         }
         @case (2) {
             <app-special />
         }
     }
-    <button
-        (click)="howBuy()"
-        class="text-white transition-all self-center duration-300 font-bold cursor-pointer bg-lh-accent-2 hover:bg-lh-accent-1 rounded-lg py-2.5 px-4"
-    >
-        Приобрести
-    </button>
 </div>
