--- a/last-hearth-landing/src/market/components/how-to-buy/how-to-buy.component.html
+++ b/last-hearth-landing/src/market/components/how-to-buy/how-to-buy.component.html
@@ -68,12 +68,12 @@
         </p>
     </div>
 
-    <button
+    <a
         href="https://boosty.to/lisov"
         target="_blank"
-        class="flex gap-4 self-center border-2 rounded-2xl border-lh-accent md:p-4 p-2.5 bg-transparent hover:scale-[103%] transition-all duration-100 uppercase font-semibold cursor-pointer"
+        class="flex gap-4 self-center !border-2 !text-lh-primary rounded-2xl !border-lh-accent md:p-4 p-2.5 bg-transparent hover:scale-[103%] transition-all duration-100 uppercase font-semibold cursor-pointer"
     >
         <img src="/images/Boosty.svg" />
         Приобрести
-    </button>
+    </a>
 </div>
